src/objects/TeamForce_User_Story_Test__c.object
<CustomObject>
    <fields>
        <fullName>Development_Sandbox__c</fullName>
        <formula>TeamForce_User_Story__r.Assigned_Sandbox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Sandbox</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Test_Date__c</fullName>
        <inlineHelpText>The date when the QA Test is conducted</inlineHelpText>
        <label>QA Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TMFC_As__c</fullName>
        <label>As...</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_I_want_to__c</fullName>
        <label>I want to...</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_Scenario_del__c</fullName>
        <formula>(
	IF(
		ISBLANK(TMFC_As__c), &quot;As a (Persona)&quot;, &quot;As &quot; &amp; TMFC_As__c )	
) &amp; (
	IF(
		ISBLANK(TMFC_I_want_to__c),&quot;, I want to (Functionality)&quot;,&quot;, I want to &quot; &amp; TMFC_I_want_to__c)
	)&amp;
(
	IF( 
		ISBLANK(TMFC_So_that__c), &quot;, so that (Value)&quot;, &quot;, so that &quot; &amp; TMFC_So_that__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scenario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMFC_So_that__c</fullName>
        <label>So that...</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamForce_Test_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indicates the Org used for the Test</inlineHelpText>
        <label>TeamForce Test Sandbox</label>
        <referenceTo>TeamForce_Sandbox__c</referenceTo>
        <relationshipLabel>TeamForce User Story Tests</relationshipLabel>
        <relationshipName>TeamForce_User_Story_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamForce_Test_Script__c</fullName>
        <label>TeamForce Test Script</label>
        <referenceTo>TMFC_TeamForce_Test_Script__c</referenceTo>
        <relationshipLabel>TeamForce User Story Tests</relationshipLabel>
        <relationshipName>TeamForce_User_Story_Tests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TeamForce_User_Story__c</fullName>
        <label>TeamForce User Story</label>
        <referenceTo>TMFC_TeamForce_User_Story__c</referenceTo>
        <relationshipLabel>TeamForce User Story Tests</relationshipLabel>
        <relationshipName>TeamForce_User_Story_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Outcome__c</fullName>
        <label>Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Priority__c</fullName>
        <inlineHelpText>Test priority should consider all the existing Teamforce User Story Test. 
Keep in mind, If all the User Story Tests have the same priority there is no priority then.</inlineHelpText>
        <label>Test Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Nice to have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Requirement__c</fullName>
        <inlineHelpText>Test requirement contains what are the data and the configuration needed to run the test</inlineHelpText>
        <label>Test Requirement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <inlineHelpText>The Test result in details, please add some details like screenshots, link to records created etc.</inlineHelpText>
        <label>Test Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <inlineHelpText>New = The Script has been created
In Draft = The Test Assignee has been developing the Test Script 
Ready for Approval = The Test Script has been developed and can be send to the Reviewer for final Approver
Ready for Use = The Test Script has been reviewed and can be used
In testing = Testing are on going
Test paused = Test cannot continue due a problem (Bug, lack of configuration etc)
Test Completed = Test has been done with Success</inlineHelpText>
        <label>Test Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Draft</fullName>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Ready for Testing</fullName>
                </value>
                <value>
                    <fullName>In Testing</fullName>
                </value>
                <value>
                    <fullName>Test paused</fullName>
                </value>
                <value>
                    <fullName>Test Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamForce_User_Story_Tests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testers_Log__c</fullName>
        <inlineHelpText>The Tester can use this field to take some notes on the test conducted such speed, reliability, low priority issues, user experience and other useful information.</inlineHelpText>
        <label>Tester&apos;s Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Integration = Ensure SFDC is able to communicate with another System.
QA = Ensure the general quality of the process (speed, efficiency and reliability).
UAT = The final product reflects the business requirements.
Non Regression Test = Ensure the development has no impacts with the existing process</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Non Regression Test</fullName>
                </value>
                <value>
                    <fullName>QA_UAT</fullName>
                    <label>QA/UAT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Test_Date__c</fullName>
        <inlineHelpText>The date when the UAT Test is conducted</inlineHelpText>
        <label>UAT Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Story_Test_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The User in charge of creating and defining the single User Story Test (scenarios, steps to reproduce, when the Test Dates, who will be the tester)
The Test Owner will ensure the single User Story tests will take place.

In general he/she is also the owner of the User Story (Developer/Engagement Team Member etc)</inlineHelpText>
        <label>User Story Test Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamForce_User_Story_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TeamForce User Story Test</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>TeamForce User Story Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TeamForce User Story Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>